# rectangify

./: .gitignore  README.md  eggs.csv  flights_cols.txt  flights_cols_unmarked.txt  food_rows.txt  pyproject.toml  rectangify  rectangify.py  requirements.txt
rectangify/: __main__.py  rectangify.py
samples/: f2024_custom_marked.txt
tests/: tecommon.py  test_items.py  test_marker.py  test_rectangify.py
tests/expected/: f2024_custom-with-space_marked.csv  flights_cols_first_marked.csv  food_rows_marked.csv
tests/input/: f2024_custom-with-space_marked.txt  f2024_custom_first_marked.txt  f2024_custom_marked.txt  flights_cols.txt  flights_cols_first_marked.txt  flights_cols_preambled.txt  flights_cols_unmarked.txt
